# x11-clipboard-standalone

./: Cargo.toml  README.txt
src/: main.rs
